# Green-chain

./: .env.example  .gitignore  Dockerfile  README.md  baseline.py  environment.py  hackathon requirenmnets.txt  inference.py  main.py  models.py  openenv.yaml  out_cmd.txt  out_inter.txt  plan  project-idea.txt  pyproject.toml  smoke_test.py  supply_chain_test_case.py  tasks.py  test.py
server/: app.py  environment.py  tasks.py
